[gd_scene load_steps=24 format=3 uid="uid://dvje8c8sahcwc"]

[ext_resource type="Script" path="res://src/levels/level_base.gd" id="1_03m7p"]
[ext_resource type="PackedScene" uid="uid://c36mwvup5f8ad" path="res://src/entities/ball_creature/ball_creature.tscn" id="2_3bdtq"]
[ext_resource type="TileSet" uid="uid://b7sy6v702d6in" path="res://src/resources/tilesets/world_tilesets.tres" id="2_05iby"]
[ext_resource type="PackedScene" uid="uid://bq2tohpkkvyrt" path="res://src/common/camera/player_camera.tscn" id="2_fykds"]
[ext_resource type="PackedScene" uid="uid://d2l1fpj8yehom" path="res://src/entities/player/player.tscn" id="2_kapmh"]
[ext_resource type="Script" path="res://src/external_utils/tilemap_collision_baker.gd" id="2_ncq64"]
[ext_resource type="Script" path="res://src/common/camera/peek_camera.gd" id="3_lfylg"]
[ext_resource type="TileSet" uid="uid://ctlwpvc6uoe4p" path="res://src/resources/tilesets/decorations_tileset.tres" id="5_6yw2v"]
[ext_resource type="Texture2D" uid="uid://dx3d0l08f7xrg" path="res://assets/ui/heart.png" id="5_pd1ws"]
[ext_resource type="Script" path="res://src/levels/health_counter.gd" id="6_y8hi7"]
[ext_resource type="AudioStream" uid="uid://c8polgiulpfcy" path="res://assets/sfx/player/player_peek.wav" id="7_rpfvd"]
[ext_resource type="Script" path="res://src/levels/screen_shaker.gd" id="9_ijk57"]
[ext_resource type="PackedScene" uid="uid://dyfvc3jli6hx" path="res://src/user_interface/pause_screen/pause_screen.tscn" id="11_n3yy7"]
[ext_resource type="PackedScene" uid="uid://b3k8nu13o07m" path="res://src/user_interface/hint_window/hint_window.tscn" id="11_u8im1"]
[ext_resource type="Theme" uid="uid://c0whh17s3gj3a" path="res://src/user_interface/theme.tres" id="12_cym4v"]
[ext_resource type="FontFile" uid="uid://bt5y8x3ki3d4x" path="res://assets/fonts/Stacked pixel.ttf" id="12_fdw6w"]
[ext_resource type="Shader" path="res://src/levels/shaders/cheer_text.gdshader" id="12_mlvte"]
[ext_resource type="Script" path="res://src/levels/transition_layer.gd" id="13_63ghm"]
[ext_resource type="Script" path="res://src/levels/cheer_label.gd" id="13_jloai"]
[ext_resource type="Shader" path="res://src/resources/shaders/transition_effect.gdshader" id="13_u8vnc"]
[ext_resource type="Texture2D" uid="uid://b35cnrrooyq0d" path="res://assets/shaders/curtain_mask.png" id="14_bq84k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vnn13"]
shader = ExtResource("12_mlvte")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oi2rl"]
shader = ExtResource("13_u8vnc")
shader_parameter/cutoff_value = 0.0
shader_parameter/mask = ExtResource("14_bq84k")

[node name="LevelBase" type="Node"]
script = ExtResource("1_03m7p")

[node name="TileMapBackground" type="TileMap" parent="."]
tile_set = ExtResource("2_05iby")
format = 2
layer_0/name = "Base"
layer_1/name = "Decorations"
layer_1/tile_data = PackedInt32Array()

[node name="ObjectsBehind" type="Node" parent="."]
editor_description = "Arrow shooters, wind generators..."

[node name="BallCreaturesCaptured" type="Node" parent="ObjectsBehind"]

[node name="TilemapBody" type="StaticBody2D" parent="."]
collision_mask = 0
script = ExtResource("2_ncq64")
tilemap_nodepath = NodePath("../TileMap")

[node name="TileMap" type="TileMap" parent="."]
rendering_quadrant_size = 8
format = 2
layer_0/name = "Base"
layer_1/name = "Slopes"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Decorations"
layer_2/tile_data = PackedInt32Array()

[node name="TileMapNoPhysics" type="TileMap" parent="."]
editor_description = "Used only for visual tile representation. Physics is done manually by special node."
rendering_quadrant_size = 8
format = 2

[node name="ObjectInMiddle" type="Node" parent="."]
editor_description = "Ladders, barriers..."

[node name="Enemies" type="Node" parent="."]

[node name="BallCreature" parent="." instance=ExtResource("2_3bdtq")]

[node name="PlayerCamera" parent="." instance=ExtResource("2_fykds")]
editor_description = "Remote transform is created and set in code in level base object script."
offset = Vector2(0, 0)

[node name="PeekCamera" type="Camera2D" parent="." node_paths=PackedStringArray("player_camera")]
process_mode = 3
script = ExtResource("3_lfylg")
player_camera = NodePath("../PlayerCamera")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PeekCamera"]
stream = ExtResource("7_rpfvd")

[node name="Player" parent="." instance=ExtResource("2_kapmh")]

[node name="ObjectsInFront" type="Node" parent="."]
editor_description = "Basket, glue..."

[node name="DecorationsTileMap" type="TileMap" parent="."]
tile_set = ExtResource("5_6yw2v")
format = 2
layer_0/tile_data = PackedInt32Array(-393212, 1, 2, -393210, 1, 2, -393209, 65537, 2)

[node name="PlayerRespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScreenShaker" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_ijk57")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthCounter" type="TextureRect" parent="UI"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
texture = ExtResource("5_pd1ws")
stretch_mode = 1
script = ExtResource("6_y8hi7")

[node name="HintWindow" parent="UI" instance=ExtResource("11_u8im1")]
visible = false

[node name="CheerLabel" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_vnn13")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -3.5
offset_right = 24.0
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.92549, 0.152941, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0.301961, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("12_fdw6w")
theme_override_font_sizes/font_size = 16
text = "<undefined>"
script = ExtResource("13_jloai")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(128, 128)

[node name="InitialPeekDelayTimer" type="Timer" parent="."]
process_mode = 3
editor_description = "Used during starting animation when automatically peeking at the level's Gummy position."
wait_time = 0.5
one_shot = true

[node name="PauseScreen" parent="." instance=ExtResource("11_n3yy7")]
process_mode = 3
visible = false

[node name="TransitionLayer" type="CanvasLayer" parent="."]
script = ExtResource("13_63ghm")

[node name="ColorRect" type="ColorRect" parent="TransitionLayer"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_oi2rl")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="TransitionLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -20.0
offset_right = 32.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelNumberLabel" type="Label" parent="TransitionLayer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("12_cym4v")
text = "Level -1"

[connection signal="timeout" from="PlayerRespawnTimer" to="." method="_on_player_respawn_timer_timeout"]
